@@ -163,6 +163,7 @@ Grid *gridDup(Grid *g);
 Grid *gridImportFAST( char *filename );
 Grid *gridExportFAST(Grid *g, char *filename );
 Grid *gridExportAFLR3(Grid *g, char *filename );
+Grid *gridExportGRI(Grid *g, char *filename );
 Grid *gridExport(Grid *g, int *nnode, int *nface, int *ncell,
 		 double **xyz, int **f2n, int **faceId, int **c2n );
 Grid *gridImportAdapt(Grid *g, char *filename );
